<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.FloorDisplayConfigFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragment_bkgnd"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/incAppBar"
            layout="@layout/item_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Initial Response: " />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/initResponseVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Write Response: " />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/writeResponseVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorLightGray">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtFloorNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neuealtegrotesk_bold"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/floor_number"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/viewDivider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:textAllCaps="true" />

                <View
                    android:id="@+id/viewDivider"
                    android:layout_width="@dimen/_2sdp"
                    android:layout_height="@dimen/_14sdp"
                    android:background="@color/colorBlack"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/txtFloorName"
                    app:layout_constraintStart_toEndOf="@id/txtFloorNo"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtFloorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neuealtegrotesk_bold"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/floor_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/viewDivider"
                    app:layout_constraintTop_toTopOf="parent"
                    app:textAllCaps="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFloors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                tools:itemCount="10"
                tools:listitem="@layout/item_floors_adapter" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSetConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/item_blue_btn_bkgnd"
            android:fontFamily="@font/neuealtegrotesk_semibold"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/set_config"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</layout>